2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] PageClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40257

        * WebCoreSupport/PageClientQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] InspectorClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40255

        * WebCoreSupport/InspectorClientQt.cpp:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] FrameLoaderClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40251

        * WebCoreSupport/FrameLoaderClientQt.h:
        (WebCore::FrameLoaderClientQt::dispatchWillSendSubmitEvent):

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by Kenneth Rohde Christiansen.

        [Qt] EditorClientQt.h has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40249

        * WebCoreSupport/EditorClientQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] EditCommandQt.cpp/h have coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40248

        * WebCoreSupport/EditCommandQt.cpp:
        (EditCommandQt::EditCommandQt):
        (EditCommandQt::~EditCommandQt):
        (EditCommandQt::redo):
        (EditCommandQt::undo):
        * WebCoreSupport/EditCommandQt.h:

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] DumpRenderTreeSupportQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40247

        * WebCoreSupport/DumpRenderTreeSupportQt.cpp:
        (DumpRenderTreeSupportQt::firstRectForCharacterRange):

2010-06-09  Anders Bakken  <agbakken@gmail.com>

        Reviewed by David Levin.

        [Qt] DragClientQt.cpp has coding-style errors
        https://bugs.webkit.org/show_bug.cgi?id=40246
